get rid of LinkedList in profiler, it is slow and consumes more memory than ArrayList